# tello_driver

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
cfg/: Tello.cfg
launch/: devel.launch  joy_teleop.launch  logger.launch  tello_node.launch  two_drones_test.launch
misc/: ds3_usb.yaml
msg/: TelloStatus.msg
src/: bytebuffer.py  gamepad_marshall_node.py  standalone_drone_test.py  standalone_two_drone_aerobatics.py  tello.py  tello_driver_node.py  test.py  test_dyncfg.py  test_h264_sub.cpp  test_h264_sub.py
src/scripts/: tello_driver_node.py
src_tellolib/: TelloDriver.py  tello_lib_notes.txt
wifi_docker_proxy/: .dockerignore  Dockerfile  README.md  config.ini.dist  get_phyid.py  go.py  setup_network.sh
wifi_docker_proxy/payload/: connect_drone.sh
